[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The server that proves a RESTful API."
authors = ["aashkir <ahmedaashkir@gmail.com>", "SirRam <sriram.suresh60@gmail.com>", "boarnoah <adipamihi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "7.1.2"
Flask = "1.1.2"
Flask-Cors = "3.0.9"
Flask-SQLAlchemy = "2.4.4"
itsdangerous = "1.1.0"
Jinja2 = "2.11.2"
MarkupSafe = "1.1.1"
six = "1.15.0"
SQLAlchemy = "1.3.19"
waitress = "1.4.4"
Werkzeug = "1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
server = "backend.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
