[tool.poetry]
name = "backend"
version = "0.1.0"
description = "The server that proves a RESTful API."
authors = ["aashkir <ahmedaashkir@gmail.com>", "SirRam <sriram.suresh60@gmail.com>", "boarnoah <adipamihi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.0.0"
Flask-SQLAlchemy = "2.5.0"
waitress = "2.1.1"
Flask-Cors = "3.0.9"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
server = "backend.__main__:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"